# exceed_bot

./: .gitignore  CMakeLists.txt  act.sh  package.xml  readme.md  setup.py
config/: joy_frsky2.yaml  joy_gamesir.yaml  joy_gamesir2.yaml  labelme_config.yaml  monitors.xml  rs_data_collect_d435.cfg  rs_rgb_camera.yaml  rs_stereo_module.yaml
exceed_bot/: __init__.py  data.py  maestro.py  motor_controller.py  train_utils.py
launch/: auto0.launch  clone3.launch  clone_node.launch  encoder_pub.launch  joy.launch  joy_frsky.launch  motor_control.launch  pid_teleop_with_rs.launch  rosbridge.launch  rs2_defaultres.launch  rs2_frsky_rec_teleop.launch  rs2_lowres.launch  rs2_rosbag_rec.launch  teleop.launch  teleop_frsky.launch  teleop_nomotor.launch  teleop_with_rs.launch  teleop_zumo.launch  wp1_d4.launch
models/: clone1.pt  clone1b.pt  clone1b.ts  clone2.pt  clone2b.pt  clone2b.ts  clone3.pt  clone3.ts  wp0.pt  wp0.ts  wp0_c4.pt  wp0_c4.ts  wp1_c2.ts  wp1_d4.ts  wp3_d2.ts
nodes/: clone0  decompress_img  encoder_pub  jetbot_cam  motor_control  pid_motor_control
notebooks/: clone1b.py  clone3.py  wp0.py  wp0_c4.py  wp1_c2.py  wp2_d4.py  wp2_d4_flip.py  wp3_d2.py
notes/: ap.txt  dmesg.txt  frsky_joy.txt  joystick.txt  maestro.txt  readme.txt  realsense_install.md  teensy2.txt  usb.txt
rviz/: realsense_xyz.rviz
scripts/: google_date.sh  gordo_master.sh  pid1.py  pid2.py  pid4.py  print_encoder.py  print_flow.py  realsense_dynparams_set.sh  rosbag_exceed.sh  rosbag_export.py  rosbag_realsense.sh  roslibpy_test0.py  rtabmap_example.sh  tacon_realsense2_launch.sh  (+6 more)
(+96 files in other folders)
